--- a/css/styles.css
+++ b/css/styles.css
@@ -84,6 +84,7 @@
   text-align: left;
   margin-left: 6.4%;
   width: 87.2%;
+  min-width: 327px;
   max-width: 750px;
   font-size: 16px;
   color: #172b4d;
