--- a/css/styles.css
+++ b/css/styles.css
@@ -4,7 +4,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@600&family=Space+Mono&display=swap');
 
 :root {
-  --mainfont: poppins, Times, serif;
+  --mainfont: poppins, times, serif;
 }
 
 * {
