--- a/css/styles.css
+++ b/css/styles.css
@@ -841,4 +841,12 @@ ul {
   .input-textarea {
     width: 447px;
   }
+
+  #project1 .pimage:hover, 
+  #project2 .pimage:hover,
+  #project3 .pimage:hover,
+  #project4 .pimage:hover
+  {
+    width: 55%;
+  }
 }
