Add transition effect on input and textarea fields

--- a/css/styles.css
+++ b/css/styles.css
@@ -593,10 +593,6 @@ ul {
   transition: all 0.5s ease-out;
 }
 
-.input-name:hover {
-  background: rgba(255,255,255,0.637);
-}
-
 .input-email {
   box-sizing: border-box;
   padding: 15px;
@@ -609,6 +605,7 @@ ul {
   font-weight: 400;
   font-size: 17px;
   line-height: 20px;
+  transition: all 0.5s ease-out;
 }
 
 .input-textarea {
@@ -623,6 +620,13 @@ ul {
   font-weight: 400;
   font-size: 17px;
   line-height: 20px;
+  transition: all 0.5s ease-out;
+}
+
+.input-name:hover,
+.input-email:hover,
+.input-textarea:hover {
+  background: rgba(255, 255, 255, 0.637);
 }
 
 .submit-button {
