--- a/css/styles.css
+++ b/css/styles.css
@@ -119,7 +119,7 @@
   height: 24px;
   width: fit-content;
   font-size: 16px;
-  color: #7f8cff;
+  color: #0016db;
   font-style: normal;
   font-weight: 500;
   border: 0;
@@ -253,7 +253,7 @@ ul {
   font-weight: 600;
   font-size: 13px;
   line-height: 16px;
-  color: #7a869a;
+  color: #4d5666;
 }
 
 .year {
@@ -263,7 +263,7 @@ ul {
   font-weight: 600;
   font-size: 13px;
   line-height: 16px;
-  color: #7a869a;
+  color: #4d5666;
 }
 
 .p-description {
@@ -297,7 +297,7 @@ ul {
   font-size: 12px;
   line-height: 16px;
   letter-spacing: 0.03em;
-  color: #6070ff;
+  color: #525252;
 }
 
 .project-access {
