--- a/css/styles.css
+++ b/css/styles.css
@@ -43,7 +43,7 @@
   height: 50%;
   width: 76px;
   font-size: 18px;
-  color: #6070ff;
+  color: #0018f5;
   font-weight: 700;
   text-align: center;
   line-height: 20px;
@@ -119,7 +119,7 @@
   height: 24px;
   width: fit-content;
   font-size: 16px;
-  color: #0016db;
+  color: #0018f5;
   font-style: normal;
   font-weight: 500;
   border: 0;
