--- a/css/styles.css
+++ b/css/styles.css
@@ -43,7 +43,7 @@
   height: 50%;
   width: 76px;
   font-size: 18px;
-  color: #0018f0;
+  color: #0015d6;
   font-weight: 700;
   text-align: center;
   line-height: 20px;
@@ -381,7 +381,7 @@ ul {
   align-items: center;
   width: 162px;
   height: 48px;
-  border: 1px solid #6070ff;
+  border: 1px solid #0018f5;
   border-radius: 8px;
   font-style: normal;
   font-weight: 500;
