--- a/css/styles.css
+++ b/css/styles.css
@@ -381,7 +381,7 @@ ul {
   align-items: center;
   width: 162px;
   height: 48px;
-  border: 1px solid #0018f5;
+  border: 1px solid #093195;
   border-radius: 8px;
   font-style: normal;
   font-weight: 500;
@@ -616,7 +616,7 @@ ul {
   line-height: 24px;
   text-align: center;
   letter-spacing: 0.03em;
-  color: #6070ff;
+  color: #0018F0;
   border: none;
 }
 
