--- a/css/styles.css
+++ b/css/styles.css
@@ -616,7 +616,7 @@ ul {
   line-height: 24px;
   text-align: center;
   letter-spacing: 0.03em;
-  color: #0018F0;
+  color: #0018f0;
   border: none;
 }
 
