--- a/css/styles.css
+++ b/css/styles.css
@@ -26,10 +26,10 @@
   width: 100%;
   height: 9%;
 }
+
 div.mobile-menu{
   position: fixed;
   padding:2rem;
-
 
 }
 .mobile-menu{
@@ -37,7 +37,7 @@ div.mobile-menu{
   flex-direction: column;
   width: 100%;
   height: 100%;
-  background-color: #6070FF;
+  background-color: #6070ff;
   opacity: 0.9;
   font-family: var(--main-font);
   font-style: normal;
@@ -48,7 +48,6 @@ div.mobile-menu{
   padding-top: 1rem;
   visibility: hidden;
 }
-
 
 .m-navlink{ 
   color: white;
