correct some linters errors

--- a/css/styles.css
+++ b/css/styles.css
@@ -27,12 +27,12 @@
   height: 9%;
 }
 
-div.mobile-menu{
+div.mobile-menu {
   position: fixed;
-  padding:2rem;
-
+  padding: 2rem;
 }
-.mobile-menu{
+
+.mobile-menu {
   display: flex;
   flex-direction: column;
   width: 100%;
@@ -49,12 +49,12 @@ div.mobile-menu{
   visibility: hidden;
 }
 
-.m-navlink{ 
+.m-navlink {
   color: white;
   text-decoration: none;
 }
 
-.close-btn{ 
+.close-btn { 
   align-self: flex-end;
   padding-right: 4rem;
 }
@@ -110,7 +110,7 @@ div.mobile-menu{
 .main-content {
   display: flex;
   flex-direction: column;
-  align-items: left;
+  align-items: flex-start;
 }
 
 .primary-text-container {
