--- a/css/styles.css
+++ b/css/styles.css
@@ -15,6 +15,7 @@
 
 .body {
   background-color: #f4f5f7;
+  filter: none;
 }
 
 .intro {
@@ -29,7 +30,11 @@
 
 div.mobile-menu {
   position: fixed;
+  z-index: 10;
   padding: 2rem;
+  background-color: #6070ff;
+  backdrop-filter: blur(100px);
+  opacity: 0.9;
 }
 
 .mobile-menu {
@@ -37,8 +42,6 @@ div.mobile-menu {
   flex-direction: column;
   width: 100%;
   height: 100%;
-  background-color: #6070ff;
-  opacity: 0.9;
   font-family: var(--main-font);
   font-style: normal;
   font-weight: 600;
