--- a/css/styles.css
+++ b/css/styles.css
@@ -67,6 +67,7 @@ div.mobile-menu {
   height: 100%;
   z-index: 20;
   background: rgba(193, 199, 208, 0.8);
+  padding-bottom: 15px;
 }
 
 .cardcontainer {
@@ -75,11 +76,11 @@ div.mobile-menu {
   margin: 1px auto 1px auto;
   width: 85%;
   min-width: 375px;
-  height: 95vh;
+  /* height: 95%; */
   left: 0;
   right: 0;
-  top: 0;
-  bottom: 0;
+  top: 20px;
+  bottom: 20px; 
   background: #fff;
   opacity: 1;
   border: 1px solid #ebecf0;
